finish the authors
